# pytest-crap

./: changelog.md  pyproject.toml  readme.md
pytest_crap/: calculator.py  mapper.py
tests/: test_calculator.py  test_mapper.py
